hphp/hack/test/typecheck/constraints/contravariance_constraint_bad.php.exp
File "contravariance_constraint_bad.php", line 30, characters 16-27:
Some type constraint(s) here are violated (Typing[4323])
File "contravariance_constraint_bad.php", line 22, characters 26-26:
'T' is a constrained type parameter
File "contravariance_constraint_bad.php", line 22, characters 31-37:
Some type constraint(s) are violated here
File "contravariance_constraint_bad.php", line 22, characters 26-26:
T is a constrained type parameter
File "contravariance_constraint_bad.php", line 22, characters 31-37:
Expected IHasFoo
File "contravariance_constraint_bad.php", line 29, characters 60-66:
But got IHasBar
File "contravariance_constraint_bad.php", line 29, characters 60-66:
Considering that this type argument is contravariant with respect to ICanCallFoo
